--- a/FInal/Window2.xaml
+++ b/FInal/Window2.xaml
@@ -54,8 +54,8 @@
                     <ImageBrush ImageSource="/WhatsApp Image 2025-11-21 at 21.08.58.jpeg"/>
                 </Rectangle.Fill>
             </Rectangle>
-            <Label Content="ID:" HorizontalAlignment="Left" Height="32" Margin="13,-2,0,0" VerticalAlignment="Top" Width="38" FontFamily="Bahnschrift SemiBold" FontSize="24"/>
-            <Label x:Name="id" Content="" HorizontalAlignment="Left" Height="33" Margin="49,3,0,0" VerticalAlignment="Top" Width="136" FontSize="14" FontFamily="Arial Black"/>
+            <Label Content="Re:" HorizontalAlignment="Left" Height="32" Margin="13,-2,0,0" VerticalAlignment="Top" Width="41" FontFamily="Bahnschrift SemiBold" FontSize="24"/>
+            <Label x:Name="re" Content="Region" HorizontalAlignment="Left" Height="33" Margin="51,5,0,0" VerticalAlignment="Top" Width="136" FontSize="14" FontFamily="Arial Black"/>
             <Label Content="Urba:" HorizontalAlignment="Left" Height="32" Margin="10,75,0,0" VerticalAlignment="Top" Width="88" FontFamily="Bahnschrift SemiBold" FontSize="24"/>
             <Label Content="Po:" HorizontalAlignment="Left" Height="32" Margin="12,153,0,0" VerticalAlignment="Top" Width="56" FontFamily="Bahnschrift SemiBold" FontSize="24"/>
             <Label Content="T°A:" HorizontalAlignment="Left" Height="37" Margin="11,228,0,0" VerticalAlignment="Top" Width="66" FontFamily="Bahnschrift SemiBold" FontSize="24"/>
